Adicionando View de Clientes

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".SobreEmpresaActivity" />
-        <activity android:name=".SobreServicosActivity"></activity>
+        <activity android:name=".SobreServicosActivity" />
+        <activity android:name=".SobreClientesActivity"></activity>
     </application>
 
 </manifest>
